DevOps_Assignment12_ITA732/terraform/main.tf
resource "tls_private_key" "key" {
  algorithm = "RSA"
  rsa_bits  = 4096
}

resource "local_file" "private_key_pem" {
  content  = tls_private_key.key.private_key_pem
  filename = "${path.module}/terraform-key.pem"
  file_permission = "0600"
}

resource "aws_key_pair" "deployer" {
  key_name   = var.key_name
  public_key = tls_private_key.key.public_key_openssh
}

resource "aws_security_group" "allow_ssh_http" {
  name        = "${var.project_tag}_sg"
  description = "Allow SSH, HTTP, Docker Swarm"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8000
    to_port     = 8000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 2377
    to_port   = 2377
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 7946
    to_port   = 7946
    protocol  = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 7946
    to_port   = 7946
    protocol  = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 4789
    to_port   = 4789
    protocol  = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

locals {
  instances = ["controller", "manager", "worker-a", "worker-b"]
}

resource "aws_instance" "nodes" {
  for_each = toset(local.instances)
  ami           = var.ami
  instance_type = var.instance_type
  key_name      = aws_key_pair.deployer.key_name
  security_groups = [aws_security_group.allow_ssh_http.name]
  tags = {
    Name = "${var.project_tag}-${each.key}"
    Role = each.key
  }
}

resource "aws_eip" "eips" {
  for_each = aws_instance.nodes
  instance = each.value.id
  vpc      = true
  tags = {
    Name = "${var.project_tag}-eip-${each.key}"
  }
}
